[package]
name = "cuda-graph"
version = "0.1.0"
edition = "2021"
description = "Property graph — nodes, edges, properties, traversal, and pattern matching for agent knowledge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-graph"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
